--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha384-Vkoo8UVvByhZl5Sm9Xp0jPphl3eRv3LlWAq59Ff125P3yQ1QEcjN7uWqQ1dUJQ"
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+  
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha384-Vkoo8UVvByhZl5Sm9Xp0jPphl3eRv3LlWAq59Ff125P3yQ1QEcjN7uWqQ1dUJQ"
   crossorigin="anonymous">
 </head>
 <body>
